--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -55,7 +55,7 @@
     outline: none;
 }
 
-input{
+input, textarea{
     width: 80%;
     background: transparent;
     border: 0;
@@ -114,7 +114,7 @@ input::placeholder{
 
 #urlImagen{
     background-color: #515966;
-    color: white; 
-    width: 100%; 
+    color: white;
+    width: 100%;
     height: 100%;
 }
