--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -30,6 +30,8 @@
 <script src="/jquery/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://mozilla.github.io/nunjucks/files/nunjucks-slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 {% block js %} {% endblock %}
 <body class="app">
     <main id="content-wrap" class="container">
