--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -31,9 +31,9 @@
                     <button type="submit" id="interestButton" class="btn btn-outline-dark mb-2">Me interesa</button>
                 </form>
                 <!-- Boton para eliminar un producto-->
-                <form action="/product/delete/{{ product.id }}" method="GET" id="btnDelete">
-                    <input type="text" class="d-none" name="productidDele" value="{{ product.id }}">
-                    <button type="submit" class="btn btn-outline-danger mb-2"><i class="fa-solid fa-trash-can fa-xl"></i></button>
+                
+                <form action="" method="GET" id="btnDelete">
+                    <button type="button" id="eliminar-{{ product.id }}" class="btn btn-outline-danger mb-2 eliminar-button" data-product-id="{{ product.id }}"><i class="fa-solid fa-trash-can fa-xl"></i></button>
                 </form>
             </div>
         </div>
@@ -41,41 +41,37 @@
 </div>
 
 <script>
-    document.getElementById('btnDelete').addEventListener('submit', function (event) {
-        event.preventDefault();
-        Swal.fire({
-            title: '¿Estás seguro de que quiere eliminar este producto?',
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#d33',
-            cancelButtonColor: '#6982E8',
-            confirmButtonText: 'Confirmar',
-            cancelButtonText: 'Cerrar',
-        }).then((result) => {
-            if (result.isConfirmed) {
-                Swal.fire(
-                    '¡Eliminado!',
-                    'La operación ha sido realizada.',
-                    'success'
-                ).then(() => {
-                    window.location.href = '/';
+    document.addEventListener('DOMContentLoaded', function() {
+        const eliminarButtons = document.querySelectorAll('.eliminar-button');
+        console.log('Entro');
+        eliminarButtons.forEach(button => {
+            button.addEventListener('click', function(event) {
+                const productId = button.getAttribute('data-product-id');
+                console.log('Entro2');
+
+                Swal.fire({
+                    title: '¿Estás seguro de que quiere Eliminar el producto?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#d33',
+                    cancelButtonColor: '#6982E8',
+                    confirmButtonText: 'Eliminar',
+                    cancelButtonText: 'No, Me equivoqué!',
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        Swal.fire(
+                            '¡Cancelada!',
+                            'La operación ha sido cancelada.',
+                            'success'
+                        ).then(() => {
+                            window.location.href = '/product/delete/' + productId;
+                        });
+                    }
                 });
-            }
+            });
         });
     });
 </script>
-
-<!--script>
-    $('.select2').select2({
-        minimumResultsForSearch: Infinity,
-    }).on('select2:select', function () {
-        $(this).trigger('blur');
-    });
-
-    $('.select2-no-search').select2().on('select2:select', function () {
-        $(this).trigger('blur');
-    });
-</script -->
 {% endmacro %}
 
 {% block js %}
