--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -1,4 +1,22 @@
+{% block stylesheet %} 
+<link rel="stylesheet" href="../static/css/formstyle.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{%endblock%}
+
+
 {% macro productCard(product) %}
+{% block style %}
+<style>
+    .btn-outline-dark:hover{
+        background-color: #030303;
+        color: #FFFFFF;
+    }
+    .btn-outline-danger:hover{
+        background-color: #dc3545;
+        color: #FFFFFF;
+    }
+</style>
+{%endblock%}
 <div class="product card">
     <div class="card-body d-flex flex-row justify-content-between align-items: center">
         <p>
