--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -40,7 +40,7 @@
     }
 
     .row-detalle{
-        height: 5em;
+        height: 4em;
     }
     .input-field select{
         width: 25%;
@@ -103,8 +103,16 @@
                 <div class="col-md-4 m-1">
                     <span class="span-content"> {{ product.marca }}</span>
                 </div>
-
             </div>
+            <div class="row row-detalle">
+                <div class="col-md-3 m-1">
+                    <strong class="span-label">Categoría:</strong>
+                </div>
+                <div class="col-md-4 m-1">
+                    <span class="span-content"> {{ product.categoria.nombre }}</span>
+                </div>
+            </div>
+
             <div class="row row-detalle">
                 <div class="col-md-3 m-1">
                     <strong class="span-label">Precio:</strong>
@@ -118,7 +126,7 @@
                 <div class="col-md-3 m-1">
                     <strong class="span-label">Zona:</strong>
                 </div>
-                <div class="col-md-4 m-1">
+                <div class="col-md-6 m-1">
                     <span class="span-content"> {{ product.localidad.nombre }}</span>
                 </div>
             </div>
