feat: Modifico la logica de las vistas para guardar los mensajes

--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -137,7 +137,7 @@
             <a href="/" class="btn btn-primary"><i class="fa-solid fa-arrow-left fa-bounce"></i>    Volver</a>
         </div>
         <div class="col p-3 d-flex justify-content-center">
-            <form action="/chat/{{ product.id }}" method="GET">
+            <form action="/chat/{{ product.id }}" method="POST">
                 <button type="submit" class="btn btn-primary">
                     <i class="fab fa-facebook-messenger"></i> Enviar mensaje
                 </button>
