Style: se modifican las redirecciones en login y registro

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="/sign-up" class="btn btn-info">No tengo cuenta todavía</a>
+                        <a href="/sign-up">¿No tienes una cuenta? Registrate</a>
                     </div>
                 </div>
             </form>
