--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="/sign-in" class="btn btn-info">Ya soy usuario</a>
+                        <a href="/sign-in">¿Ya tienes una cuenta? Iniciá sesión</a>
                     </div>
                 </div>
             </form>
