--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -60,7 +60,7 @@
             </div>
         </form>
         <button onclick='window.location.href = "/formulario" ' class="btn btn-light ml-auto" id="button-publicar" style="font-size: 1.0rem; padding: 0.50rem 1.0rem; margin-right: 10px;">Publicar producto</button>
-        {% if estaAutenticado %}
+        {% if estaAuth === true %}
             {% set unreadCount = 0 %}
             {% for notification in notifications %}
                 {% if notification.estado == 'N' %}
@@ -77,7 +77,7 @@
                         <a class="dropdown-item" href="/logout">Cerrar sesión</a>
                     </div>
                 </div>
-            </div>    
+            </div>
             <div class="dropdown notifications">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownNotificactionButton" data-haspopup="true" aria-expanded="false">
                     <i class="fa-regular fa-bell"></i>
@@ -96,7 +96,7 @@
                                 {% endif %}
                             {% else %}
                                 <a class="dropdown-item" style="background-color: #E8ECEC;">{{ notification.texto }}</a>
-                            
+
                             {% endif %}
                         </div>
                     {% endfor %}
@@ -118,7 +118,7 @@
                         <a class="dropdown-item" href="/sign-up">Registrarme</a>
                     </div>
                 </div>
-            </div> 
+            </div>
         {% endif %}
     </div>
 </nav>
@@ -127,19 +127,19 @@
     document.addEventListener("DOMContentLoaded", function() {
         var dropdownNotificationsMenu = document.querySelector(".dropdown-menu.dropdown-notifications");
         var dropdownNotificationsButton = document.querySelector("#dropdownNotificactionButton");
-        
+
         var dropdownUserMenu = document.querySelector(".dropdown-menu.dropdown-userLog");
         var dropdownUserButton = document.querySelector("#dropdownUserButton");
-        
+
         // Oculta los menús desplegables al cargar la página
         dropdownNotificationsMenu.classList.remove("show");
         dropdownUserMenu.classList.remove("show");
-        
+
         // Muestra y oculta el menú desplegable de notificaciones
         dropdownNotificationsButton.addEventListener("click", function() {
             dropdownNotificationsMenu.classList.toggle("show");
         });
-        
+
         // Muestra y oculta el menú desplegable de usuario
         dropdownUserButton.addEventListener("click", function() {
             dropdownUserMenu.classList.toggle("show");
@@ -151,7 +151,7 @@
     document.addEventListener("DOMContentLoaded", function() {
         var dropdownUserNoLogMenu = document.querySelector(".dropdown-menu.dropdown-userNoLog");
         var dropdownUserNoLogButton = document.querySelector("#dropdownUserNoLogButton");
-        
+
         // Oculta los menús desplegables al cargar la página
         dropdownUserNoLogMenu.classList.remove("show");
 
