feat: Agrego el boton de alquilar

--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -151,6 +151,13 @@
                 </button>
             </form>
         </div>
+        <div class="col p-3 d-flex justify-content-start">
+            <form action="/alquilar/{{ product.id }}" method="POST">
+                <button type="submit" class="btn btn-success">
+                    Alquilar Producto
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
