--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -15,10 +15,14 @@
         background-color: #dc3545;
         color: #FFFFFF;
     }
+    .alquilado{
+        background-color: gray;
+        opacity: 85%;
+    }
 </style>
 {%endblock%}
 <div class="product card">
-    <div class="card-body d-flex flex-row justify-content-between align-items: center">
+    <div class="card-body d-flex flex-row justify-content-between align-items-center {% if product.estado === 'A' %}alquilado{% endif %}">
         <p>
             {% if product.urlImagen %}
                 <img src="{{ product.urlImagen }}" alt="Imagen de {{ product.nombre }}" width="144px" height="144px" small class="rounded border b-2 float-start" loading="async" />
@@ -27,7 +31,11 @@
             {% endif %}
         </p>
         <div class="ms-3">
-            <h5 class="card-title mb-0">{{ product.nombre }}</h5>
+            <h5 class="card-title mb-0">{{ product.nombre }}
+            {% if product.estado === 'A' %}
+                - ALQUILADO -
+            {% endif %}
+            </h5>
             <p class="card-text">
                 <small class="text-muted">{{ product.categoria.nombre }}</small>
             </p>
