--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -151,7 +151,7 @@
                 </button>
             </form>
         </div>
-        {% if product.estado == null %}
+        {% if product.estado !== 'A' %}
         <div class="col p-3 d-flex justify-content-start">
             <form action="/alquilar/{{ product.id }}" method="POST">
                 <button type="submit" class="btn btn-success">
