--- a/src/views/alquilar.html
+++ b/src/views/alquilar.html
@@ -10,7 +10,7 @@
     <div class="container" id="containerPost">
         <div class="form-content">
             <h1 id="title">Alquilar producto</h1>
-            <form action="/alquilar" method="post" id="formPostAlquiler" enctype="multipart/form-data">
+            <form action="/alquilar/{{product_id}}" method="post" id="formPostAlquiler" enctype="multipart/form-data">
                 <div class="input-group" id="inputPost">
                     <div class="input-field" id="nombreApellidoInput">
                         <i class="fa-solid fa-user"></i>
