--- a/src/views/alquilar.html
+++ b/src/views/alquilar.html
@@ -14,19 +14,20 @@
                 <div class="input-group" id="inputPost">
                     <div class="input-field" id="nombreApellidoInput">
                         <i class="fa-solid fa-user"></i>
-                        <input type="text" name="nombreApellido" placeholder="Nombre Apellido">
+                        <input type="text" placeholder="Nombre Apellido como figura en la tarjeta" style="text-transform:uppercase;" name="nombreApellido" >
                     </div>
                     <div class="input-field" id="nroTarjetaInput">
                         <i class="fa-solid fa-credit-card"></i>
-                        <input type="text" name="nroTarjeta" placeholder="Número de tarjeta">
+                        <input type="text" name="nroTarjeta" placeholder="Número de tarjeta" required minlength="16" maxlength="16">
                     </div>
                     <div class="input-field" id="codSegInput">
                         <i class="fa-solid fa-lock"></i>
-                        <input type="password" name="codSeg" placeholder="Código de seguridad">
+                        <input type="password" name="codSeg" placeholder="Código de seguridad" required minlength="3" maxlength="3">
                     </div>
                     <div class="col">
                         <label for="Fecha">Fecha</label>
-                        <input type="month" name="fecha" id="fecha" class="form-control" value="2019-08" style="background-color: #515966; color:white">
+                        <i class="fa-regular fa-calendar"></i>
+                        <input type="month" name="fecha" id="fecha" placeholder="Fecha de Venc" class="form-control" value="2019-08" style="background-color: #515966; color:white">
                     </div>
                 </div>
                 <br>
