fix: ajuste de los placeholder y de las mayusuclas

--- a/src/views/alquilar.html
+++ b/src/views/alquilar.html
@@ -14,7 +14,7 @@
                 <div class="input-group" id="inputPost">
                     <div class="input-field" id="nombreApellidoInput">
                         <i class="fa-solid fa-user"></i>
-                        <input type="text" placeholder="Nombre Apellido como figura en la tarjeta" style="text-transform:uppercase;" name="nombreApellido" >
+                        <input type="text" placeholder="Nombre Apellido" style="text-transform:uppercase;" name="nombreApellido" >
                     </div>
                     <div class="input-field" id="nroTarjetaInput">
                         <i class="fa-solid fa-credit-card"></i>
