--- a/src/views/_chatProducto.html
+++ b/src/views/_chatProducto.html
@@ -48,8 +48,8 @@
     const sendButton = document.querySelector('.send_message');
     const userId = sendButton.getAttribute('data-userid');
     const chatId = sendButton.getAttribute('data-chatid');
-    console.log("ChatId:", chatId);
-    console.log("UserId:", userId);
+    console.log("ChatId del LADO DEL CLIENTE ANTES DE INICIAR:", chatId);
+    console.log("UserId del LADO DEL CLIENTE ANTES DE INICIAR:", userId);
 
     async function cargarMensajesAnteriores(chatId) {
       try {
@@ -58,7 +58,7 @@
 
         if (data && data.length > 0) {
           data.forEach((message) => {
-            addMessage(message, userId);;
+            addMessage(message);;
           });
         }
       } catch (error) {
@@ -68,8 +68,10 @@
     }
     cargarMensajesAnteriores(chatId);
   
-    function addMessage(message, userId) {
-        const isCurrentUser = message.emisor;
+    function addMessage(msg) {
+        const isCurrentUser = msg.emisor
+        const text= msg.texto
+        console.log("Valor del text extraido del objeto msg :", text);
         console.log("Valor del isCurrenteUser osea el usuario :", isCurrentUser);
         const messageClass = isCurrentUser ? 'right' : 'left'; // Determina si el mensaje es del usuario actual (derecha) o del otro usuario (izquierda)
         const messageWrapper = document.createElement('li');
@@ -77,7 +79,7 @@
         messageWrapper.innerHTML = `
           <div class="avatar"></div>
           <div class="text_wrapper">
-            <div class="text">${message.texto}</div> <!-- Agrega el texto del mensaje al elemento -->
+            <div class="text">${text}</div> <!-- Agrega el texto del mensaje al elemento -->
           </div>
         `;
         messagesList.appendChild(messageWrapper);
@@ -94,8 +96,7 @@
           'Content-Type': 'application/json',
         },
         body: JSON.stringify({
-          texto: messageText,
-          emisor: userId,
+          texto: messageText
         }),
       });
         console.log("Respuesta del servidor:", response);
@@ -103,8 +104,8 @@
             console.log('Mensaje enviado con éxito');
             // Emitir el mensaje a la sala de chat específica
             socket.emit('chat message', {
-                message: messageText,
-                senderId: userId,
+                texto: messageText,
+                emisor: userId,
                 chatId: chatId,
             });
         } else {
@@ -126,9 +127,11 @@
     });
 
     socket.on('chat message', (data) => {
-      console.log('Valor de data:', data);
-      console.log('Valor de data:', data.emisor);
-      addMessage(data, userId);
+      console.log('Valor de data del cliente:', data);
+      console.log('Valor del chatID del data del cliente:', data.chatId);
+      console.log('Valor del message del data del cliente:', data.texto);
+      console.log('Valor del senderID del data del cliente:', data.emisor);
+      addMessage(data , data.senderId);
     });
   });
 </script>
