feat: Agrego icono de categoria

--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -37,7 +37,9 @@
             {% endif %}
             </h5>
             <p class="card-text">
+                <span><i class="fa fa-lg {{product.categoria.icono_fa}}"></i></span>
                 <small class="text-muted">{{ product.categoria.nombre }}</small>
+
             </p>
 
             <p class="fs-3">$ {{ product.precio }}</p>
